5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1016.log
== TEST (2019-03-24 20:59:37) 
-- CODE:
a = float (input())
b = float (input())
c = float (input())



-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:08:32) 
-- CODE:
a = float (input())
b = float (input())
c = float (input())

s = a+b+c/2
from math import*
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt = s(s-a)*(s-b)*(s-c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:08:44) 
-- CODE:
a = float (input())
b = float (input())
c = float (input())

s = a+b+c/2
from math import*
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt = s(s-a)*(s-b)*(s-c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:50:51) 
-- CODE:
a = float (input())
b = float (input())
c = float (input())

s = a+b+c/2
from math import*
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt = s(s-a)*(s-b)*(s-c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:56:51) 
-- CODE:
a = float (input())
b = float (input())
c = float (input())

from math import*
s = a+b+c/2
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    sqrt = s(s-a)*(s-b)*(s-c)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:57:55) 
-- CODE:
a = input())
b = input())
c = input())

from math import*
s = a+b+c/2
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
File "XXXX", line 1
    a = input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:58:20) 
-- CODE:
a = input("")
b = input("")
c = input("")

from math import*
s = a+b+c/2
sqrt = s(s-a)*(s-b)*(s-c)
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = a+b+c/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:05:26) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

from math import*
sp = (a+b+c)/2
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    sp = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:06:27) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

from math import*
sp = (a+b+c)/2
print(sp)
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    sp = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:06:41) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

sp = (a+b+c)/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sp = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:07:27) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = (a+b+c)/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:08:38) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a+b+c/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = a+b+c/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:09:05) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s=(a+b+c)/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=(a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:10:13) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s =(a+b+c)/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s =(a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:10:31) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s =(a+b+c)/1/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s =(a+b+c)/1/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:10:50) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s =(a+b+c) ** 1/2
print(sp)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s =(a+b+c) ** 1/2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:11:07) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s =(a+b+c) ** 1/2
print(s)
from math import*
sqrt = (s(s-a)*(s-b)*(s-c))
print (sqrt)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s =(a+b+c) ** 1/2
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:12:00) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a + b + c/2




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = a + b + c/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:12:30) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a + b + c/2




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = a + b + c/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:13:05) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = (a+b+c)/2





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:15:49) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

import math 
s = (a+b+c)/2





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    s = (a+b+c)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:18:33) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = (a+b+2)/2
print(s)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+2)/2
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:18:50) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a + b + c 
print(s)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:19:28) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a+b+c/2
print(s)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = a+b+c/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:19:37) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a+b+c 
print(s)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:20:29) 
-- CODE:
a = input("")
float (a)
b = input("")
float (b)
c = input("")
float (c)

s = a + b + c 
print(s)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:20:48) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
float (c)

s = a + b + c 
int (s)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:20:58) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
float (c)

s = a + b + c 
print (s)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:21:13) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
float (c)

p = (a + b + c) 
print (s)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:21:25) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
float (c)

p = (a + b + c) 
print (p)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:21:40) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
int (c)

p = (a + b + c) 
print (p)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:22:28) 
-- CODE:
a = input("")
int (a)
b = input("")
int (b)
c = input("")
int (c)

from math import* 
p = (a + b + c) 
print (p)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int (a)
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:23:00) 
-- CODE:
a = input("")
float (a)
b = input("")
float(b) 
c = input("")
float (c)

from math import* 
p = (a + b + c) 
print (p)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:24:00) 
-- CODE:
a = input("")
float (a)
b = input("")
float(b) 
c = input("")
float (c)

p = (a + b + c) 
print (p)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:25:01) 
-- CODE:
a = input("")
float (a)
b = input("")
float(b) 
c = input("")
float (c)

perimetro = a+b+c
print (perimetro)





-- OUTPUT:
11.019.513.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:26:09) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

perimetro = a+b+c
print (perimetro)





-- OUTPUT:
43.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:26:39) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

semiperimetro = (a+b+c)/2






-- OUTPUT:
43.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:26:55) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

semiperimetro = (a+b+c)/2
print(semiperimetro)





-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:27:01) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

semiperimetro = (a+b+c)/2
print(semiperimetro)





-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:32:18) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

semiperimetro = (a+b+c)/2
print(semiperimetro)

from math import*
A = s*(s-a)*(s-b)*(s-c).math.sqrt
print (A)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = s*(s-a)*(s-b)*(s-c).math.sqrt
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:32:47) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

semiperimetro = (a+b+c)/2
print(semiperimetro)

from math import*
A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
print (A)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
AttributeError: 'float' object has no attribute 'math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:33:27) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

from math import*
semiperimetro = (a+b+c)/2
print(semiperimetro)

A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
print (A)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
AttributeError: 'float' object has no attribute 'math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:33:47) 
-- CODE:
from math import*
a = float (input(""))
b = float (input(""))
c = float (input(""))


semiperimetro = (a+b+c)/2
print(semiperimetro)

A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
print (A)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    A = semiperimetro*(semiperimetro-a)*(semiperimetro-b)*(semiperimetro-c).math.sqrt
AttributeError: 'float' object has no attribute 'math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:34:11) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))


s = (a+b+c)/2
print(s)







-- OUTPUT:
21.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:37:52) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*
A = math.sqrt(s(s-a)*(s-b)*(s-c))
print(A)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = math.sqrt(s(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:38:09) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s(s-a)*(s-b)*(s-c))
print(A)








-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:47:57) 
-- CODE:
from math import*
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(s)
print(A)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    A = math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:48:19) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

from math import*
s = (a+b+c)/2
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(s)
print(A)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    A = math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:49:12) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
import math*
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(s)
print(A)









-- ERROR:
File "XXXX", line 5
    import math*
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:49:19) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
from import math*
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(s)
print(A)









-- ERROR:
File "XXXX", line 5
    from import math*
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:49:42) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    A = math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:50:01) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)
from import math*
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- ERROR:
File "XXXX", line 6
    from import math*
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:50:04) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)
from import math*
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- EXECUTION TIME:
0.170961
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 6
    from import math*
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:50:33) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    A = math.sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:50:43) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- OUTPUT:
21.85
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:51:41) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)









-- OUTPUT:
21.85
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:52:02) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
round(x,5)
print (round)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    round(x,5)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:52:28) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A, 5)









-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:52:34) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A, 5)









-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:52:52) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A, 5)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:53:07) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
-- OUTPUT:
21.85
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:53:39) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A,5))
-- OUTPUT:
21.85
69.41967475975385
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:53:54) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A,5))
-- EXECUTION TIME:
0.154393
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967475975385
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.1665442616423
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:53:58) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(A)
print(round(A,5))
-- EXECUTION TIME:
0.145151
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967475975385
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.1665442616423
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:54:22) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
print(A)

-- OUTPUT:
21.85
69.41967
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:54:42) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:55:23) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:55:35) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))
s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))

-- EXECUTION TIME:
0.194646
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:55:56) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

from math import*
s = (a+b+c)/2
print(s)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:56:07) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

from math import*
s = (a+b+c)/2
print(s)
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))

-- EXECUTION TIME:
0.200042
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:56:51) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*

x = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(x,5))

-- EXECUTION TIME:
0.126228
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:57:02) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:57:18) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.165298
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:57:41) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.155866
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:57:57) 
-- CODE:
a = float (input(""))
b = float (input(""))
c = float (input(""))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.142624
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:58:25) 
-- CODE:
a = float (input("Comprimento 1"))
b = float (input("Comprimento 2"))
c = float (input("Comprimento 3"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:58:28) 
-- CODE:
a = float (input("Comprimento 1"))
b = float (input("Comprimento 2"))
c = float (input("Comprimento 3"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.217894
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:58:53) 
-- CODE:
a = float (input("Comprimento 1>"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt s * (s-a) * (s-b) * (s-c)
print(round(A,5 ))

-- ERROR:
File "XXXX", line 10
    A = sqrt s * (s-a) * (s-b) * (s-c)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:59:02) 
-- CODE:
a = float (input("Comprimento 1>"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.155605
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:59:06) 
-- CODE:
a = float (input("Comprimento 1>"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:59:13) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:00:00) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*

A = sqrt(s * (s-a) * (s-b) * (s-c))
print round(A,5 )

-- ERROR:
File "XXXX", line 11
    print round(A,5 )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:34) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:39) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.195229
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:53) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
A = sqrt((s * (s-a) * (s-b) * (s-c))
print(round(A,5 ))

-- EXECUTION TIME:
0.17625
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 10
    print(round(A,5 ))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:02:14) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
AREA = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(AREA,5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:02:18) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
AREA = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(AREA,5 ))

-- EXECUTION TIME:
0.153921
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:02:37) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)

from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A, 5 ))

-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:03:27) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(A, 5 ))

-- EXECUTION TIME:
0.143472
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:16) 
-- CODE:
a = float (input("Comprimento 1:"))
b = float (input("Comprimento 2:"))
c = float (input("Comprimento 3:"))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print(A)
print((round(A,5))

-- EXECUTION TIME:
0.138389
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:29) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print((round(A,5))

-- EXECUTION TIME:
0.145294
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:04:30) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print((round(A,5))

-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:52) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- EXECUTION TIME:
0.133272
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:55) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- EXECUTION TIME:
0.156133
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:55) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- EXECUTION TIME:
0.150331
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
65.5
709.16654
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:04:55) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- EXECUTION TIME:
0.14691
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:04:56) 
-- CODE:
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:05:09) 
-- CODE:
3.0
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
print(s)
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:16:15) 
-- CODE:
3.0
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:16:23) 
-- CODE:
3.0
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:16:36) 
-- CODE:
3.0
a = float (input("Comprimento 1: "))
b = float (input("Comprimento 2: "))
c = float (input("Comprimento 3: "))

s = (a+b+c)/2
from math import*
A = sqrt(s * (s-a) * (s-b) * (s-c))
print (round(A,5))
-- EXECUTION TIME:
0.13044
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
